# claw-code

./: .env.example  .gitignore  CLAW.md  MANIFEST.in  NEXT.md  PLAN_v3_features.md  README.md  capabilities.html  claw_cli.py  drip-engine.html  package-lock.json  package.json  pyproject.toml  rattlesnake_showcase.html  system-flow.html  test_memory_tiers.py
apis/: database.json  design.json  registry.json  resend.json  security.json  stripe.json  supabase.json
app/: page.js
app/api/: auth.ts
pages/api/: example.ts  hello.ts
prompts/: backend_rules.md  communication.md  core_identity.md  design_quality.md  discovery_flow.md  discovery_flow_condensed.md  frontend_rules.md  inner_monologue.md  memory_plan.md  production_quality.md  registry.json  scaffold_rules.md  security_rules.md  security_rules_condensed.md  workflow_rules.md
rattlesnake/: __init__.py  providers.py
src/lib/supabase/: server.ts
templates/html-css-js/: index.html  script.js  styles.css  template.json
templates/nextjs-supabase/: package.json  template.json
templates/nextjs-supabase/src/app/: layout.tsx  page.tsx
templates/nextjs-supabase/supabase/: schema.sql
tests/: test_project_graph.py  test_rescue_parser.py  test_routing.py  test_security_enforcement.py  test_validation_rules.py
tests/e2e/: README.md  __init__.py  run_e2e.py
tests/e2e/tasks/add_flag/: prompt.txt  verify.py
tests/e2e/tasks/fix_syntax/: prompt.txt  verify.py
tests/e2e/tasks/fizzbuzz/: prompt.txt  verify.py
tests/e2e/tasks/hello_world/: prompt.txt  verify.py
tests/e2e/tasks/read_count/: prompt.txt  (+1 more)
(+9 files in other folders)
