[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-code"
version = "0.2.0"
description = "Local AI coding agent powered by Ollama -- free, no subscription"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai", "coding", "agent", "ollama", "openrouter", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
claw = "claw_cli:main"
rattlesnake = "claw_cli:main"

[tool.setuptools]
py-modules = ["claw_cli"]

[tool.setuptools.data-files]
"share/claw-code/apis" = ["apis/*.json"]
"share/claw-code/prompts" = ["prompts/*.json", "prompts/*.md"]
"share/claw-code/templates/html-css-js" = ["templates/html-css-js/*"]
"share/claw-code/templates/nextjs-supabase" = ["templates/nextjs-supabase/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
